Fixing menu spacing on use cases slider

--- a/sass/site/pages/_home.scss
+++ b/sass/site/pages/_home.scss
@@ -424,17 +424,21 @@ margin: 80px 0 160px 0;
         text-align: center;
         flex-direction: row;
         justify-content: center;
+        max-width: 900px;
+        margin: auto;
         margin-bottom: 30px;
         ul {
             list-style: none;
         }
         li {
             text-align: center;
-            max-width: 150px;
+            
             vertical-align: middle;
             display: flex;
             border-right: 1px solid  $color__yellow;
             flex-direction: column;
+            margin: 0;
+            flex: 1;
         }
         li:last-child {
             border-right: 0;
