--- a/sass/style.css
+++ b/sass/style.css
@@ -2026,6 +2026,8 @@ a:hover, a:active {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  max-width: 900px;
+  margin: auto;
   margin-bottom: 30px;
 }
 
@@ -2035,7 +2037,6 @@ a:hover, a:active {
 
 #use-cases .flipster__nav li {
   text-align: center;
-  max-width: 150px;
   vertical-align: middle;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2045,6 +2046,10 @@ a:hover, a:active {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin: 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 #use-cases .flipster__nav li:last-child {
